--- a/admin/common.html
+++ b/admin/common.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>공동 스타일</title>
   <link rel="stylesheet" href="/css/common.css">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.min.js"></script>
 </head>
 
 <body>
@@ -24,14 +26,84 @@
         </ul>
       </div>
     </div>
-    <ul class="gnb-menu">
-      <li class="main-menu d-flex align-items-center justify-content-center"><i class="fa-solid fa-wrench"></i>대시보드</li>
-      <li class="main-menu d-flex align-items-center justify-content-center"><i class="fas fa-user-friends"></i>회원 관리</li>
-      <li class="main-menu d-flex align-items-center justify-content-center"><i class="fa-solid fa-book"></i>강좌 관리</li>
-      <li class="main-menu d-flex align-items-center justify-content-center"><i class="fas fa-money-check-alt"></i>매출 관리</li>
-      <li class="main-menu d-flex align-items-center justify-content-center"><i class="fas fa-bullhorn"></i>이벤트 관리</li>
-      <li class="main-menu d-flex align-items-center justify-content-center"><i class="fas fa-th-list"></i>게시판 관리</li>
-    </ul>
+    <div data-simplebar>
+      <ul class="gnb-menu">
+        <li class="d-flex align-items-center">
+          <a href="#">
+            <i class="fa-solid fa-wrench"></i>
+            <span class="main-menu-ft">대시보드</span>
+          </a>
+        </li>
+        <li class="d-flex align-items-center">
+          <a data-bs-toggle="collapse" role="button" href="#menuUserctrl" class="menu-wrap">
+            <i class="fas fa-user-friends"></i>
+            <span class="main-menu-ft">회원 관리</span>
+          </a>
+          <div class="collapse" id="menuUserctrl">
+            <ul>
+              <li><a href="" class="sub-menu-ft">회원관리</a></li>
+              <li><a href="" class="sub-menu-ft">강사관리</a></li>
+              <li><a href="" class="sub-menu-ft">관리자관리</a></li>
+              <li><a href="" class="sub-menu-ft">회원그룹관리</a></li>
+              <li><a href="" class="sub-menu-ft">회원휴면/탈퇴관리</a></li>
+              <li><a href="" class="sub-menu-ft">개인정보조회기록</a></li>
+              <li><a href="" class="sub-menu-ft">메일발송관리</a></li>
+            </ul>
+          </div>
+        </li>
+        <li class="d-flex align-items-center">
+          <a data-bs-toggle="collapse" role="button" href="#menuCoursectrl" >
+            <i class="fa-solid fa-book"></i>
+            <span class="main-menu-ft">강좌 관리</span>
+          </a>
+          <div class="collapse" id="menuCoursectrl">
+            <ul>
+              <li><a href="" class="sub-menu-ft">과정카테고리</a></li>
+              <li><a href="" class="sub-menu-ft">강좌리스트</a></li>
+              <li><a href="" class="sub-menu-ft">강좌관리</a></li>
+            </ul>
+          </div>
+        </li>
+        <li class="d-flex align-items-center">
+          <a data-bs-toggle="collapse" role="button" href="#menuSalesctrl" >
+            <i class="fas fa-money-check-alt"></i>
+            <span class="main-menu-ft">매출 관리</span>
+          </a>
+          <div class="collapse" id="menuSalesctrl">
+            <ul>
+              <li><a href="" class="sub-menu-ft">월별매출통계</a></li>
+              <li><a href="" class="sub-menu-ft">과정매출통계</a></li>
+            </ul>
+          </div>
+        </li>
+        <li class="d-flex align-items-center">
+          <a data-bs-toggle="collapse" role="button" href="#menuEventctrl" >
+            <i class="fas fa-bullhorn"></i>
+            <span class="main-menu-ft">이벤트 관리</span>
+          </a>
+          <div class="collapse" id="menuEventctrl">
+            <ul>
+              <li><a href="" class="sub-menu-ft">쿠폰관리</a></li>
+              <li><a href="" class="sub-menu-ft">프리패스</a></li>
+            </ul>
+          </div>
+        </li>
+        <li class="d-flex align-items-center">
+          <a data-bs-toggle="collapse" role="button" href="#menuBoardctrl">
+            <i class="fas fa-th-list"></i>
+            <span class="main-menu-ft">게시판 관리</span>
+          </a>
+          <div class="collapse" id="menuBoardctrl">
+            <ul>
+              <li><a href="" class="sub-menu-ft">공지사항 게시판</a></li>
+              <li><a href="" class="sub-menu-ft">수강후기 게시판</a></li>
+              <li><a href="" class="sub-menu-ft">수강문의 게시판</a></li>
+              <li><a href="" class="sub-menu-ft">커뮤니티 게시판</a></li>
+            </ul>
+          </div>
+        </li>
+      </ul>
+    </div>
   </div>
   <div class="content-body content-pd">
     <!-- 로고 및 북마크 위치 시작 -->
@@ -78,13 +150,6 @@
     <a class="mini-tag limit-tag">무제한</a>
     <a class="mini-tag limit-tag">제한</a>
     <hr>
-    <div class="bookmark">
-      <input type="checkbox" id="bookmark1"/>
-      <label for="bookmark1"><i class="fa-solid fa-bookmark"></i></label>
-    </div>
-    <hr>
-
-
   </div>
 </div>
 </body>
