--- a/admin/common.html
+++ b/admin/common.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>공동 스타일</title>
-  <link rel="stylesheet" href="/css/common.css">
+  <link rel="stylesheet" href="css/common.css">
   <link rel="stylesheet" href="https://unpkg.com/simplebar@5.3.3/dist/simplebar.min.css" />
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://unpkg.com/simplebar@5.3.3/dist/simplebar.min.js"></script>
@@ -17,7 +17,7 @@
     <div class="h-100" data-simplebar>
     <div class="admin-profile">
       <div class="profile-img-wrap">
-        <img src="/img/admin-profile.png" alt="admin-img">
+        <img src="img/admin-profile.png" alt="admin-img">
       </div>
       <h2>Manager</h2>
       <div class="profile-menu-wrap">
@@ -109,15 +109,15 @@
   <div class="content-body content-pd">
     <!-- 로고 및 북마크 위치 시작 -->
     <div class="content-top">
-      <h1 id="main-logo"><a href="/"><img src="../img/fastcode_logo.png" alt="Fastcode"><span>fastcode</span></a></h1>
+      <h1 id="main-logo"><a href="/"><img src="img/fastcode_logo.png" alt="Fastcode"><span>fastcode</span></a></h1>
       <div class="bookmark">
         <input type="checkbox" id="bookmark1"/>
         <label for="bookmark1"><i class="fa-solid fa-bookmark"></i></label>
       </div>
     </div>
     <!-- 로고 및 북마크 위치 끝 -->
-    <h1 id="main-logo"><a href="/"><img src="../img/fastcode_logo_big.png" alt="Fastcode"><span>fastcode</span></a></h1>
-    <h1 id="main-logo"><a href="/"><img src="../img/fastcode_logo.png" alt="Fastcode"><span>fastcode</span></a></h1>
+    <h1 id="main-logo"><a href="/"><img src="img/fastcode_logo_big.png" alt="Fastcode"><span>fastcode</span></a></h1>
+    <h1 id="main-logo"><a href="/"><img src="img/fastcode_logo.png" alt="Fastcode"><span>fastcode</span></a></h1>
     <hr>
     <h2 class="page-title">페이지 제목</h2>
     <h2 class="popup-title">팝업 제목</h2>
