--- a/admin/common.html
+++ b/admin/common.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,152 +13,234 @@
 </head>
 
 <body>
-<div class="common-wrap">
-  <div class="gnb-body">
-    <div class="h-100" data-simplebar>
-    <div class="admin-profile">
-      <div class="profile-img-wrap">
-        <img src="img/admin-profile.png" alt="admin-img">
-      </div>
-      <h2>Manager</h2>
-      <div class="profile-menu-wrap">
-        <ul class="profile-menu d-flex justify-content-center">
-          <li><a href=""><i class="fa-brands fa-whmcs"></i></a></li>
-          <li><a href=""><i class="fa-regular fa-calendar-check"></i></a></li>
-          <li><a href=""><i class="fa-brands fa-weixin"></i></a></li>
-        </ul>
+  <div class="common-wrap">
+    <div class="gnb-body">
+      <div class="h-100" data-simplebar>
+        <div class="admin-profile">
+          <div class="profile-img-wrap">
+            <img src="img/admin-profile.png" alt="admin-img">
+          </div>
+          <h2>Manager</h2>
+          <div class="profile-menu-wrap">
+            <ul class="profile-menu d-flex justify-content-center">
+              <li><a href=""><i class="fa-brands fa-whmcs"></i></a></li>
+              <li><a href=""><i class="fa-regular fa-calendar-check"></i></a></li>
+              <li><a href=""><i class="fa-brands fa-weixin"></i></a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="accordion" id="main-menu-wrap">
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="hdDashboard">
+              <a class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#menuDashboard"
+                aria-expanded="true" aria-controls="menuDashboard">
+                <i class="fa-solid fa-wrench"></i>
+                <span class="main-menu-ft">대시보드</span>
+              </a>
+            </h2>
+            <div id="menuDashboard" class="accordion-collapse collapse show" aria-labelledby="hdDashboard"
+              data-bs-parent="#main-menu-wrap">
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="hdUser">
+              <a class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#menuUser"
+                aria-expanded="false" aria-controls="menuUser">
+                <i class="fas fa-user-friends"></i>
+                <span class="main-menu-ft">회원 관리</span>
+              </a>
+            </h2>
+            <div id="menuUser" class="accordion-collapse collapse" aria-labelledby="hdUser"
+              data-bs-parent="#main-menu-wrap">
+              <ul class="accordion-body">
+                <li><a href="" class="sub-menu-ft"><span>&middot;</span><span>회원관리</span></a></li>
+                <li><a href="" class="sub-menu-ft"><span>&middot;</span><span>강사관리</span></a></li>
+                <li><a href="" class="sub-menu-ft"><span>&middot;</span><span>관리자관리</span></a></li>
+                <li><a href="" class="sub-menu-ft"><span>&middot;</span><span>회원그룹관리</span></a></li>
+                <li><a href="" class="sub-menu-ft"><span>&middot;</span><span>회원휴면/탈퇴관리</span></a></li>
+                <li><a href="" class="sub-menu-ft"><span>&middot;</span><span>개인정보조회기록</span></a></li>
+                <li><a href="" class="sub-menu-ft"><span>&middot;</span><span>메일발송관리</span></a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="hdCourse">
+              <a class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#menuCourse"
+                aria-expanded="false" aria-controls="menuCourse">
+                <i class="fa-solid fa-book"></i>
+                <span class="main-menu-ft">강좌 관리</span>
+              </a>
+            </h2>
+            <div id="menuCourse" class="accordion-collapse collapse" aria-labelledby="hdCourse"
+              data-bs-parent="#main-menu-wrap">
+              <ul class="accordion-body">
+                <li>
+                  <a href="" class="sub-menu-ft">
+                    <span>&middot;</span>
+                    <span>과정카테고리</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="sub-menu-ft">
+                    <span>&middot;</span>
+                    <span>강좌리스트</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="sub-menu-ft">
+                    <span>&middot;</span>
+                    <span>강좌관리</span>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="hdSales">
+              <a class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#menuSales"
+                aria-expanded="false" aria-controls="menuSales">
+                <i class="fas fa-money-check-alt"></i>
+                <span class="main-menu-ft">매출 관리</span>
+              </a>
+            </h2>
+            <div id="menuSales" class="accordion-collapse collapse" aria-labelledby="hdSales"
+              data-bs-parent="#main-menu-wrap">
+              <ul class="accordion-body">
+                <li>
+                  <a href="" class="sub-menu-ft">
+                    <span>&middot;</span>
+                    <span>월별매출통계</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="sub-menu-ft">
+                    <span>&middot;</span>
+                    <span>과정매출통계</span>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="hdEvent">
+              <a class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#menuEvent"
+                aria-expanded="false" aria-controls="menuEvent">
+                <i class="fas fa-bullhorn"></i>
+                <span class="main-menu-ft">이벤트 관리</span>
+              </a>
+            </h2>
+            <div id="menuEvent" class="accordion-collapse collapse" aria-labelledby="hdEvent"
+              data-bs-parent="#main-menu-wrap">
+              <ul class="accordion-body">
+                <li>
+                  <a href="" class="sub-menu-ft">
+                    <span>&middot;</span>
+                    <span>쿠폰관리</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="sub-menu-ft">
+                    <span>&middot;</span>
+                    <span>프리패스</span>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="hdBoard">
+              <a class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#menuBoard"
+                aria-expanded="false" aria-controls="menuBoard">
+                <i class="fas fa-th-list"></i>
+                <span class="main-menu-ft">게시판 관리</span>
+              </a>
+            </h2>
+            <div id="menuBoard" class="accordion-collapse collapse" aria-labelledby="hdBoard"
+              data-bs-parent="#main-menu-wrap">
+              <ul class="accordion-body">
+                <li>
+                  <a href="" class="sub-menu-ft">
+                    <span>&middot;</span>
+                    <span>공지사항 게시판</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="sub-menu-ft">
+                    <span>&middot;</span>
+                    <span>수강후기 게시판</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="sub-menu-ft">
+                    <span>&middot;</span>
+                    <span>수강문의 게시판</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="sub-menu-ft">
+                    <span>&middot;</span>
+                    <span>커뮤니티 게시판</span>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-      <ul class="gnb-menu">
-        <li class="d-flex flex-column">
-          <a href="#" data-bs-toggle="collapse" role="button" class="menu-wrap" aria-expanded="true">
-            <i class="fa-solid fa-wrench"></i>
-            <span class="main-menu-ft">대시보드</span>
-          </a>
-        </li>
-        <li class="d-flex flex-column">
-          <a data-bs-toggle="collapse" role="button" href="#menuUserctrl" class="menu-wrap">
-            <i class="fas fa-user-friends"></i>
-            <span class="main-menu-ft">회원 관리</span>
-          </a>
-          <div class="collapse" id="menuUserctrl">
-            <ul>
-              <li><a href="" class="sub-menu-ft"><span>&middot;</span><span>회원관리</span></a></li>
-              <li><a href="" class="sub-menu-ft"><span>&middot;</span><span>강사관리</span></a></li>
-              <li><a href="" class="sub-menu-ft"><span>&middot;</span><span>관리자관리</span></a></li>
-              <li><a href="" class="sub-menu-ft"><span>&middot;</span><span>회원그룹관리</span></a></li>
-              <li><a href="" class="sub-menu-ft"><span>&middot;</span><span>회원휴면/탈퇴관리</span></a></li>
-              <li><a href="" class="sub-menu-ft"><span>&middot;</span><span>개인정보조회기록</span></a></li>
-              <li><a href="" class="sub-menu-ft"><span>&middot;</span><span>메일발송관리</span></a></li>
-            </ul>
-          </div>
-        </li>
-        <li class="d-flex flex-column">
-          <a data-bs-toggle="collapse" role="button" href="#menuCoursectrl" class="menu-wrap">
-            <i class="fa-solid fa-book"></i>
-            <span class="main-menu-ft">강좌 관리</span>
-          </a>
-          <div class="collapse" id="menuCoursectrl">
-            <ul>
-              <li><a href="" class="sub-menu-ft"><span>&middot;</span><span>과정카테고리</span></a></li>
-              <li><a href="" class="sub-menu-ft"><span>&middot;</span><span>강좌리스트</span></a></li>
-              <li><a href="" class="sub-menu-ft"><span>&middot;</span><span>강좌관리</span></a></li>
-            </ul>
-          </div>
-        </li>
-        <li class="d-flex flex-column">
-          <a data-bs-toggle="collapse" role="button" href="#menuSalesctrl" class="menu-wrap">
-            <i class="fas fa-money-check-alt"></i>
-            <span class="main-menu-ft">매출 관리</span>
-          </a>
-          <div class="collapse" id="menuSalesctrl">
-            <ul>
-              <li><a href="" class="sub-menu-ft"><span>&middot;</span><span>월별매출통계</span></a></li>
-              <li><a href="" class="sub-menu-ft"><span>&middot;</span><span>과정매출통계</span></a></li>
-            </ul>
-          </div>
-        </li>
-        <li class="d-flex flex-column">
-          <a data-bs-toggle="collapse" role="button" href="#menuEventctrl" class="menu-wrap">
-            <i class="fas fa-bullhorn"></i>
-            <span class="main-menu-ft">이벤트 관리</span>
-          </a>
-          <div class="collapse" id="menuEventctrl">
-            <ul>
-              <li><a href="" class="sub-menu-ft"><span>&middot;</span><span>쿠폰관리</span></a></li>
-              <li><a href="" class="sub-menu-ft"><span>&middot;</span><span>프리패스</span></a></li>
-            </ul>
-          </div>
-        </li>
-        <li class="d-flex flex-column">
-          <a data-bs-toggle="collapse" role="button" href="#menuBoardctrl" class="menu-wrap">
-            <i class="fas fa-th-list"></i>
-            <span class="main-menu-ft">게시판 관리</span>
-          </a>
-          <div class="collapse" id="menuBoardctrl">
-            <ul>
-              <li><a href="" class="sub-menu-ft"><span>&middot;</span><span>공지사항 게시판</span></a></li>
-              <li><a href="" class="sub-menu-ft"><span>&middot;</span><span>수강후기 게시판</span></a></li>
-              <li><a href="" class="sub-menu-ft"><span>&middot;</span><span>수강문의 게시판</span></a></li>
-              <li><a href="" class="sub-menu-ft"><span>&middot;</span><span>커뮤니티 게시판</span></a></li>
-            </ul>
-          </div>
-        </li>
-      </ul>
-    </div>
-  </div>
-  <div class="content-body content-pd">
-    <!-- 로고 및 북마크 위치 시작 -->
-    <div class="content-top">
+    <div class="content-body content-pd">
+      <!-- 로고 및 북마크 위치 시작 -->
+      <div class="content-top">
+        <h1 id="main-logo"><a href="/"><img src="img/fastcode_logo.png" alt="Fastcode"><span>fastcode</span></a></h1>
+        <div class="bookmark">
+          <input type="checkbox" id="bookmark1" />
+          <label for="bookmark1"><i class="fa-solid fa-bookmark"></i></label>
+        </div>
+      </div>
+      <!-- 로고 및 북마크 위치 끝 -->
+      <h1 id="main-logo"><a href="/"><img src="img/fastcode_logo_big.png" alt="Fastcode"><span>fastcode</span></a></h1>
       <h1 id="main-logo"><a href="/"><img src="img/fastcode_logo.png" alt="Fastcode"><span>fastcode</span></a></h1>
-      <div class="bookmark">
-        <input type="checkbox" id="bookmark1"/>
-        <label for="bookmark1"><i class="fa-solid fa-bookmark"></i></label>
-      </div>
+      <hr>
+      <h2 class="page-title">페이지 제목</h2>
+      <h2 class="popup-title">팝업 제목</h2>
+      <h2 class="content-title">컨텐츠 제목</h2>
+      <p class="content-text-1">컨텐츠 내용1</p>
+      <p class="content-text-2">컨텐츠 내용2</p>
+      <p class="content-text-3">컨텐츠 내용3</p>
+      <hr>
+      <h3 class="main-menu-ft">메인메뉴</h3>
+      <h3 class="sub-menu-ft">서브메뉴</h3>
+      <hr>
+      <a class="y-btn big-btn btn-navy">button</a>
+      <a class="y-btn big-btn btn-sky">BUTTON</a>
+      <a class="y-btn big-btn btn-red">BUTTON</a>
+      <hr>
+      <a class="y-btn mid-btn btn-navy">button</a>
+      <a class="y-btn mid-btn btn-sky">BUTTON</a>
+      <a class="y-btn mid-btn btn-red">BUTTON</a>
+      <hr>
+      <a class="y-btn small-btn btn-navy">button</a>
+      <a class="y-btn small-btn btn-sky">BUTTON</a>
+      <a class="y-btn small-btn btn-red">BUTTON</a>
+      <hr>
+      <a class="y-btn login-btn btn-navy">LOGIN</a>
+      <hr>
+      <span class="lec_upload"><i class="fa-solid fa-square-plus"></i></span>
+      <span class="lec_play"><i class="fa-regular fa-circle-play"></i></span>
+      <hr>
+      <a class="mini-tag new-tag">new</a>
+      <a class="mini-tag hot-tag">hot</a>
+      <a class="mini-tag limit-tag">무제한</a>
+      <a class="mini-tag limit-tag">제한</a>
+      <hr>
     </div>
-    <!-- 로고 및 북마크 위치 끝 -->
-    <h1 id="main-logo"><a href="/"><img src="img/fastcode_logo_big.png" alt="Fastcode"><span>fastcode</span></a></h1>
-    <h1 id="main-logo"><a href="/"><img src="img/fastcode_logo.png" alt="Fastcode"><span>fastcode</span></a></h1>
-    <hr>
-    <h2 class="page-title">페이지 제목</h2>
-    <h2 class="popup-title">팝업 제목</h2>
-    <h2 class="content-title">컨텐츠 제목</h2>
-    <p class="content-text-1">컨텐츠 내용1</p>
-    <p class="content-text-2">컨텐츠 내용2</p>
-    <p class="content-text-3">컨텐츠 내용3</p>
-    <hr>
-    <h3 class="main-menu-ft">메인메뉴</h3>
-    <h3 class="sub-menu-ft">서브메뉴</h3>
-    <hr>
-    <a class="y-btn big-btn btn-navy">button</a>
-    <a class="y-btn big-btn btn-sky">BUTTON</a>
-    <a class="y-btn big-btn btn-red">BUTTON</a>
-    <hr>
-    <a class="y-btn mid-btn btn-navy">button</a>
-    <a class="y-btn mid-btn btn-sky">BUTTON</a>
-    <a class="y-btn mid-btn btn-red">BUTTON</a>
-    <hr>
-    <a class="y-btn small-btn btn-navy">button</a>
-    <a class="y-btn small-btn btn-sky">BUTTON</a>
-    <a class="y-btn small-btn btn-red">BUTTON</a>
-    <hr>
-    <a class="y-btn login-btn btn-navy">LOGIN</a>
-    <hr>
-    <span class="lec_upload"><i class="fa-solid fa-square-plus"></i></span>
-    <span class="lec_play"><i class="fa-regular fa-circle-play"></i></span>
-    <hr>
-    <a class="mini-tag new-tag">new</a>
-    <a class="mini-tag hot-tag">hot</a>
-    <a class="mini-tag limit-tag">무제한</a>
-    <a class="mini-tag limit-tag">제한</a>
-    <hr>
   </div>
-</div>
-<script src="menu.js"></script>
-<script>
-  document.addEventListener("DOMContentLoaded", function () {
-    new SimpleBar(document.querySelector("[data-simplebar]"));
-  });
-</script>
+  <script src="menu.js"></script>
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      new SimpleBar(document.querySelector("[data-simplebar]"));
+    });
+  </script>
 </body>
+
 </html>
