메뉴 수정중

--- a/admin/common.html
+++ b/admin/common.html
@@ -53,13 +53,48 @@
             <div id="menuUser" class="accordion-collapse collapse" aria-labelledby="hdUser"
               data-bs-parent="#main-menu-wrap">
               <ul class="accordion-body">
-                <li><a href="" class="sub-menu-ft"><span>&middot;</span><span>회원관리</span></a></li>
-                <li><a href="" class="sub-menu-ft"><span>&middot;</span><span>강사관리</span></a></li>
-                <li><a href="" class="sub-menu-ft"><span>&middot;</span><span>관리자관리</span></a></li>
-                <li><a href="" class="sub-menu-ft"><span>&middot;</span><span>회원그룹관리</span></a></li>
-                <li><a href="" class="sub-menu-ft"><span>&middot;</span><span>회원휴면/탈퇴관리</span></a></li>
-                <li><a href="" class="sub-menu-ft"><span>&middot;</span><span>개인정보조회기록</span></a></li>
-                <li><a href="" class="sub-menu-ft"><span>&middot;</span><span>메일발송관리</span></a></li>
+                <li>
+                  <a href="" class="sub-menu-ft">
+                    <span>&middot;</span>
+                    <span>회원관리</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="sub-menu-ft">
+                    <span>&middot;</span>
+                    <span>강사관리</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="sub-menu-ft">
+                    <span>&middot;</span>
+                    <span>관리자관리</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="sub-menu-ft">
+                    <span>&middot;</span>
+                    <span>회원그룹관리</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="sub-menu-ft">
+                    <span>&middot;</span>
+                    <span>회원휴면/탈퇴관리</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="sub-menu-ft">
+                    <span>&middot;</span>
+                    <span>개인정보조회기록</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="sub-menu-ft">
+                    <span>&middot;</span>
+                    <span>메일발송관리</span>
+                  </a>
+                </li>
               </ul>
             </div>
           </div>
