--- a/admin/board/delete_popup.html
+++ b/admin/board/delete_popup.html
@@ -301,6 +301,7 @@
           </div>
         </div>
         <!-- 로고 및 북마크 위치 끝 -->
+        <!-- 본문시작 -->
 
         <h2 class="page-title">공지사항</h2>
         <div>
@@ -316,7 +317,7 @@
               <p>클릭한 글 내용이 나옵니다.</p>
               <br />
               <p>
-                ex) 안녕하십니까 FAST CODE 입니다.<br />
+                ex 안녕하십니까 FAST CODE 입니다.<br />
                 원활하고 안정된 서비스 제공을 위하여 2023년 2월 새벽 시스템 점검
                 작업이 예정되어 있습니다.<br />
                 점검 시간 중 홈페이지 및 모바일의 모든 서비스가 중단될
