메뉴 링크 추가(확인해야함)

--- a/admin/common.html
+++ b/admin/common.html
@@ -33,7 +33,7 @@
           <div class="accordion-item">
             <h2 class="accordion-header" id="hdDashboard">
               <a class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#menuDashboard"
-                aria-expanded="true" aria-controls="menuDashboard">
+                aria-expanded="true" aria-controls="menuDashboard"  onclick="location.href='dashboard/index.php'">
                 <i class="fa-solid fa-wrench"></i>
                 <span class="main-menu-ft">대시보드</span>
               </a>
@@ -110,13 +110,13 @@
               data-bs-parent="#main-menu-wrap">
               <ul class="accordion-body">
                 <li>
-                  <a href="" class="sub-menu-ft">
+                  <a href="category/category.php" class="sub-menu-ft">
                     <span>&middot;</span>
                     <span>과정카테고리</span>
                   </a>
                 </li>
                 <li>
-                  <a href="" class="sub-menu-ft">
+                  <a href="lecture/lecture_list.php" class="sub-menu-ft">
                     <span>&middot;</span>
                     <span>강좌리스트</span>
                   </a>
@@ -168,7 +168,7 @@
               data-bs-parent="#main-menu-wrap">
               <ul class="accordion-body">
                 <li>
-                  <a href="" class="sub-menu-ft">
+                  <a href="coupon/coupon_llist.php" class="sub-menu-ft">
                     <span>&middot;</span>
                     <span>쿠폰관리</span>
                   </a>
@@ -194,7 +194,7 @@
               data-bs-parent="#main-menu-wrap">
               <ul class="accordion-body">
                 <li>
-                  <a href="" class="sub-menu-ft">
+                  <a href="board/board_list.html" class="sub-menu-ft">
                     <span>&middot;</span>
                     <span>공지사항 게시판</span>
                   </a>
