--- a/admin/board/board_index.html
+++ b/admin/board/board_index.html
@@ -305,28 +305,24 @@
         <h2 class="page-title">공지사항</h2>
 
         <div class="borad_top">
-          <div class="row pd-54">
-            <a href="#" class="y-btn big-btn btn-navy">글쓰기</a>
-          </div>
-          <div class="borad_search_form">
-            <form class="row pd-54">
-              <select
-                class="form-select"
-                name="search_board"
-                name="search_board"
-              >
-                <option value="title">제목</option>
-                <option value="name">글쓴이</option>
-                <option value="content">내용</option>
-              </select>
-              <input
-                class="form-control"
-                type="search"
-                name="search"
-                required
-              />
-            </form>
-          </div>
+          <a href="#" class="y-btn big-btn btn-navy">글쓰기</a>
+          <form class="board_forms">
+            <select
+              class="form-select"
+              name="search_board"
+              name="search_board"
+            >
+              <option value="title">제목</option>
+              <option value="name">글쓴이</option>
+              <option value="content">내용</option>
+            </select>
+            <input
+              class="form-control"
+              type="search"
+              name="search"
+              required
+            />
+          </form>
         </div>
 
         <table>
@@ -342,7 +338,7 @@
           <tbody>
             <tr>
               <td>5</td>
-              <td>신규 회원 월컴 기프트 쿠폰 증정 이벤트 안내</td>
+              <td>신규 회원 웰컴 기프트 쿠폰 증정 이벤트 안내</td>
               <td>관리자</td>
               <td>2023.3.12</td>
               <th>
@@ -393,13 +389,17 @@
           </tbody>
         </table>
 
-        <div class="pagenation">
-          <ul>
-            <li><i class="fa-solid fa-chevron-left"></i></li>
-            <li>1</li>
-            <li>2</li>
-            <li>3</li>
-            <li><i class="fa-solid fa-chevron-right"></i></li>
+        <div class="board_pagination row">
+          <ul class="row col justify-content-center">
+            <li class="col-auto">
+              <a href=""><i class="fa-solid fa-chevron-left"></i></a>
+            </li>
+            <li class="col-auto"><a href="" class="active">1</a></li>
+            <li class="col-auto"><a href="">2</a></li>
+            <li class="col-auto"><a href="">3</a></li>
+            <li class="col-auto">
+              <a href=""><i class="fa-solid fa-chevron-right"></i></a>
+            </li>
           </ul>
         </div>
       </div>
