--- a/admin/board/board_read.html
+++ b/admin/board/board_read.html
@@ -294,10 +294,10 @@
               ></a
             >
           </h1>
-          <div class="bookmark">
+          <!-- <div class="bookmark">
             <input type="checkbox" id="bookmark1" />
             <label for="bookmark1"><i class="fa-solid fa-bookmark"></i></label>
-          </div>
+          </div> -->
         </div>
         <!-- 로고 및 북마크 위치 끝 -->
         <!-- 본문시작 -->
@@ -341,7 +341,7 @@
             </div>
           </div>
           <div class="list_btn">
-            <a href="#" class="y-btn big-btn btn-navy">글쓰기</a>
+            <a href="#" class="y-btn big-btn btn-navy">목록으로</a>
           </div>
         </div>
       </div>
