--- a/admin/board/board_delete.html
+++ b/admin/board/board_delete.html
@@ -342,7 +342,7 @@
                       <div class="flex">
                         <p class="title">글을 삭제하시겠습니까?</p>
                         <input type="text" placeholder="삭제될 글 제목">
-                        <div class="btns">
+                        <div class="popup_btns">
                           <a id="close" class="y-btn big-btn btn-sky"
                             >취소하기</a
                           >
