--- a/admin/coupon/coupon_delete.html
+++ b/admin/coupon/coupon_delete.html
@@ -313,6 +313,10 @@
                 name="search"
                 placeholder="검색어를 입력하세요."
                 required>
+                <button
+                type="submit"
+                id="search"
+                class="col-md-2 y-btn mid-btn btn-sky">
             </div>
             </div>
 
