--- a/admin/coupon/coupon_delete.html
+++ b/admin/coupon/coupon_delete.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>쿠폰 리스트(with삭제팝업)</title>
-    <link rel="stylesheet" href="../css/common.css">
-    <link rel="stylesheet" href="../css/coupon_list.css">
-    <link rel="stylesheet" href="../css/coupon_delete.css">
+    <link rel="stylesheet" href="../css/common.css" />
+    <link rel="stylesheet" href="../css/coupon_list.css" />
+    <link rel="stylesheet" href="../css/coupon_delete.css" />
     <link
       rel="stylesheet"
-      href="https://unpkg.com/simplebar@5.3.3/dist/simplebar.min.css">
+      href="https://unpkg.com/simplebar@5.3.3/dist/simplebar.min.css"
+    />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/simplebar@5.3.3/dist/simplebar.min.js"></script>
   </head>
@@ -21,7 +22,7 @@
         <div class="h-100" data-simplebar>
           <div class="admin-profile">
             <div class="profile-img-wrap">
-              <img src="../img/admin-profile.png" alt="admin-img">
+              <img src="../img/admin-profile.png" alt="admin-img" />
             </div>
             <h2>Manager</h2>
             <div class="profile-menu-wrap">
@@ -289,92 +290,102 @@
         <div class="content-top">
           <h1 id="main-logo">
             <a href="/"
-              ><img src="../img/fastcode_logo.png" alt="Fastcode"><span
+              ><img src="../img/fastcode_logo.png" alt="Fastcode" /><span
                 >fastcode</span
               ></a
             >
           </h1>
           <div class="bookmark">
-            <input type="checkbox" id="bookmark1">
+            <input type="checkbox" id="bookmark1" />
             <label for="bookmark1"><i class="fa-solid fa-bookmark"></i></label>
           </div>
         </div>
         <!-- 로고 및 북마크 위치 끝 -->
         <!-- 본문시작 -->
 
-            <h2 class="page-title">쿠폰 리스트</h2>
+        <h2 class="page-title">쿠폰 리스트</h2>
 
-            <div class="coupon_top">
-            <a href="#" class="y-btn big-btn btn-navy">쿠폰추가하기</a>
-            <div class="coupon_search">
-                <input
-                class="form-control"
-                type="search"
-                name="search"
-                placeholder="검색어를 입력하세요."
-                required>
-            </div>
-            </div>
+        <div class="coupon_top">
+          <a href="#" class="y-btn big-btn btn-navy">쿠폰추가하기</a>
+          <div class="coupon_search">
+            <input
+              class="form-control"
+              type="search"
+              name="search"
+              placeholder="검색어를 입력하세요."
+              required
+            />
+            <button
+              type="submit"
+              id="search"
+              class="col-md-2 y-btn mid-btn btn-sky"
+            >
+              검색하기
+            </button>
+          </div>
+        </div>
 
-            <ul class="coupon_list">
-                <li class="list_contents">
-                    <figure>
-                        <img src="https://placehold.co/198x135" alt="">
-                    </figure>
-                    <div class="titles">
-                        <div class="big_titles">
-                          <h3>UI/UX 강좌 10%할인</h3>
-                          <a class="mini-tag new-tag">new</a>
-                          <a class="mini-tag limit-tag">무제한</a>
-                        </div>
-                        <div class="sub_titles">
-                            <p>최소금액 : <span>50,000원 이상</span></p>
-                            <p>할인율 : <span>10%</span></p>
-                        </div>
-                    </div>
-                    <div class="coupon_select">
-                        <select class="form-select" name="coupon" id="coupon">
-                            <option value="활성화">활성화</option>
-                            <option value="비활성화">비활성화</option>
-                        </select>   
-                    </div>
-                    <!-- 삭제 버튼을 누르면 팝업 버튼 -->
-                    <div class="btns">
-                      <button class="y-btn small-btn btn-navy">수정하기</button>
-                      <button id="show" class="y-btn small-btn btn-red">삭제하기</button>
-                    </div>
-                      <!-- 팝업 HTML -->
-                      <div class="background">
-                        <div class="window">
-                          <div class="popup">
-                            <div class="flex">
-                              <p class="title">쿠폰을 삭제하시겠습니까?</p>
-                              <input type="text" placeholder="삭제 될 쿠폰 제목">
-                              <div class="popup_btns">
-                                <a id="close" class="y-btn big-btn btn-sky">취소하기</a>
-                                <a class="y-btn big-btn btn-red">삭제하기</a>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                      <!-- 팝업 HTML 끝 -->
-                </li>
-            </ul>
-
-            <div class="coupon_pagination row">
-                <ul class="row col justify-content-center">
-                <li class="col-auto">
-                    <a href=""><i class="fa-solid fa-chevron-left"></i></a>
-                </li>
-                <li class="col-auto"><a href="" class="active">1</a></li>
-                <li class="col-auto"><a href="">2</a></li>
-                <li class="col-auto"><a href="">3</a></li>
-                <li class="col-auto">
-                    <a href=""><i class="fa-solid fa-chevron-right"></i></a>
-                </li>
-                </ul>
+        <ul class="coupon_list">
+          <li class="list_contents">
+            <figure>
+              <img src="https://placehold.co/198x135" alt="" />
+            </figure>
+            <div class="titles">
+              <div class="big_titles">
+                <h3>UI/UX 강좌 10%할인</h3>
+                <a class="mini-tag new-tag">new</a>
+                <a class="mini-tag limit-tag">무제한</a>
+              </div>
+              <div class="sub_titles">
+                <p>최소금액 : <span>50,000원 이상</span></p>
+                <p>할인율 : <span>10%</span></p>
+              </div>
             </div>
+            <div class="coupon_select">
+              <select class="form-select" name="coupon" id="coupon">
+                <option value="활성화">활성화</option>
+                <option value="비활성화">비활성화</option>
+              </select>
+            </div>
+            <!-- 삭제 버튼을 누르면 팝업 버튼 -->
+            <div class="btns">
+              <button class="y-btn small-btn btn-navy">수정하기</button>
+              <button id="show" class="y-btn small-btn btn-red">
+                삭제하기
+              </button>
+            </div>
+            <!-- 팝업 HTML -->
+            <div class="background">
+              <div class="window">
+                <div class="popup">
+                  <div class="flex">
+                    <p class="title">쿠폰을 삭제하시겠습니까?</p>
+                    <input type="text" placeholder="삭제 될 쿠폰 제목" />
+                    <div class="popup_btns">
+                      <a id="close" class="y-btn big-btn btn-sky">취소하기</a>
+                      <a class="y-btn big-btn btn-red">삭제하기</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- 팝업 HTML 끝 -->
+          </li>
+        </ul>
+
+        <div class="coupon_pagination row">
+          <ul class="row col justify-content-center">
+            <li class="col-auto">
+              <a href=""><i class="fa-solid fa-chevron-left"></i></a>
+            </li>
+            <li class="col-auto"><a href="" class="active">1</a></li>
+            <li class="col-auto"><a href="">2</a></li>
+            <li class="col-auto"><a href="">3</a></li>
+            <li class="col-auto">
+              <a href=""><i class="fa-solid fa-chevron-right"></i></a>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
 
