--- a/admin/board/board_index.html
+++ b/admin/board/board_index.html
@@ -305,8 +305,8 @@
         <h2 class="page-title">공지사항</h2>
 
         <div class="borad_top">
-          <a href="./board_write.php" class="y-btn big-btn btn-navy">글쓰기</a>
-          <form action="./board_search_ok.php" method="GET" class="board_forms">
+          <a href="#" class="y-btn big-btn btn-navy">글쓰기</a>
+          <div class="board_forms">
             <select class="form-select" name="search_board" id="search_board">
               <option value="title">제목</option>
               <option value="name">글쓴이</option>
@@ -327,7 +327,7 @@
             >
               검색하기
             </button>
-          </form>
+          </div>
         </div>
 
         <table>
