common.html 로고 추가

--- a/user/common.html
+++ b/user/common.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/common.css">
 </head>
 <body>
+  <h1 id="main-logo"><a href="/"><img src="img/fastcode_logo.png" alt="Fastcode"><span>fastcode</span></a></h1>
   <h2 class="main-title">페이지 제목</h2>
   <h2 class="popup-title">팝업 제목</h2>
   <h3 class="title">제목</h3>
