add header html

--- a/user/common.html
+++ b/user/common.html
@@ -8,6 +8,29 @@
   <link rel="stylesheet" href="css/common.css">
 </head>
 <body>
+  <header class="">
+    <div class="container d-flex justify-content-between">
+        <h1 class="hidden">fastcode</h1>
+        <nav class="main-menu-ft">
+            <ul class="d-flex">
+                <li><a href="">about us</a></li>
+                <li><a href="">강의</a></li>
+                <li><a href="">커뮤니티</a></li>
+                <li><a href="">이벤트</a></li>
+                <li><a href="">고객지원</a></li>
+            </ul>
+        </nav>
+        <form action="">
+            <input type="text" />
+        </form>
+        <div>
+            <span>cart</span>
+            <span>login</span>
+            <span>sign up</span>
+        </div>
+    </div>
+  </header>
+  
   <h1 id="main-logo"><a href="/"><img src="img/fastcode_logo.png" alt="Fastcode"><span>fastcode</span></a></h1>
   <h2 class="main-title">페이지 제목</h2>
   <h2 class="popup-title">팝업 제목</h2>
