top-button html추가

--- a/user/common.html
+++ b/user/common.html
@@ -54,5 +54,9 @@
   <hr>
   <span class="lec_play"><i class="fa-regular fa-circle-play"></i></span>
   <hr>
+  <div class="top-btn">
+        <i class="fa-solid fa-arrow-up"></i>
+  </div>
+  <hr>
 </body>
 </html>
